--- a/HomeScreen/home.html
+++ b/HomeScreen/home.html
@@ -46,7 +46,10 @@
         <p tyle="text-align: center; margin: 20px;">
             <div class="container">
                 <p style="text-align: center; margin: 20px;" class="cover" >
-                    <img alt="MOANA" height="150px" onclick="MOANA.showModal()" src="../Images/moana-18147.webp" >
+                    <a href="https://www.mediafire.com/file/flvy1m6debirs2l/Moana_2016_CrunchyCrack.mp4/file">
+                        <img alt="MOANA" height="150px" onclick="MOANA.showModal()" src="../Images/moana-18147.webp" >     
+                    </a>
+                   
                     <br>
                     
                     Moana 2016
